[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/LevelSelect/UpgradeMenuFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Space Shooter GUI/PNG/Level_Menu/Window.png" type="Texture" id=2]
[ext_resource path="res://Menus/UI_ButtonClicked.mp3" type="AudioStream" id=3]
[ext_resource path="res://Space Shooter GUI/PNG/Upgrade/Close_BTN.png" type="Texture" id=4]
[ext_resource path="res://Space Shooter GUI/PNG/Buttons/BTNs_Active/Close_BTN.png" type="Texture" id=5]
[ext_resource path="res://Levels/LevelSelect/StatsMenu.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Display"
tracks/0/type = "value"
tracks/0/path = NodePath("WindowTexture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1039.59, 16.9706 ), Vector2( 21.2131, 16.9706 ) ]
}

[node name="StatsMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowTexture" type="TextureRect" parent="."]
anchor_left = -26.52
anchor_right = -26.52
margin_left = 21.2131
margin_top = 16.9706
margin_right = 965.212
margin_bottom = 496.971
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ShopNameLbl" type="Label" parent="WindowTexture"]
margin_left = 9.0
margin_top = 17.0
margin_right = 940.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 1 )
text = "Stats"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CloseButton" type="TextureButton" parent="WindowTexture"]
margin_left = 844.832
margin_top = 9.91571
margin_right = 892.832
margin_bottom = 57.9157
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseSFX" type="AudioStreamPlayer" parent="WindowTexture/CloseButton"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Display = SubResource( 1 )

[connection signal="button_up" from="WindowTexture/CloseButton" to="." method="_on_CloseButton_button_up"]
